# AnoShip

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
anoship-app/: pyproject.toml
anoship-app/anoship/adapters/: __init__.py  sklearn.py  torch_mstdf.py
anoship-app/anoship/app/: __init__.py  builder.py  cli.py
anoship-app/anoship/reporting/: __init__.py  report.py
anoship-app/anoship/scenarios/: __init__.py  library.py
anoship-core/: pyproject.toml
anoship-core/anoship/core/: __init__.py  config.py  context.py  errors.py  interfaces.py  registry.py  types.py
anoship-detection/: pyproject.toml
anoship-detection/anoship/attribution/: __init__.py  root_cause.py
anoship-detection/anoship/detectors/: __init__.py  base.py  causal.py  diffusion.py  ensemble.py  ewma.py  habituation.py  spatiotemporal.py
anoship-detection/anoship/detectors/_ahsc/: __init__.py  ahsc.py  enhancement.py  microcluster.py  projection.py
anoship-detection/anoship/scoring/: __init__.py  calibration.py  fusion.py  thresholds.py
anoship-mstdf/: NOTICE  README.md  pyproject.toml
anoship-mstdf/anoship/contrib/: __init__.py  mstdf.py
anoship-mstdf/mstdf_ad/: main.py  requirements.txt
anoship-mstdf/mstdf_ad/data/: dataset.py  preprocess.py
anoship-mstdf/mstdf_ad/dataset/MSL/: make_pk.py
anoship-mstdf/mstdf_ad/dataset/PSM/: make_pk.py
anoship-mstdf/mstdf_ad/dataset/SMAP/: make_pk.py
anoship-mstdf/mstdf_ad/dataset/SMD/: make_pk.py
anoship-mstdf/mstdf_ad/dataset/SWaT/: make_pk.py
anoship-mstdf/mstdf_ad/exp/: exp.py
anoship-mstdf/mstdf_ad/model/: FE.py  GRUVAE.py  MSTDF.py  attention.py  block.py  embedding.py  getTrend.py  vae.py
anoship-mstdf/mstdf_ad/scripts/: run.sh
anoship-mstdf/mstdf_ad/utils/: dwt.py  earlystop.py  evaluate.py  getKLContributions.py  getbestF1.py  getentitylist.py
anoship-mstdf/mstdf_ad/utils/affiliation/: __init__.py  metrics.py
anoship-pipeline/: pyproject.toml
anoship-pipeline/anoship/observability/: __init__.py  events.py  exporters.py  metrics.py
anoship-pipeline/anoship/pipeline/: __init__.py  health_gate.py  pipeline.py  promotion.py  rollback.py  rollout.py  state_machine.py
anoship-pipeline/anoship/policy/: __init__.py  decision.py  gate_policy.py  risk_tier.py
anoship-pipeline/anoship/snapshots/: __init__.py  registry.py
anoship-signals/: pyproject.toml
anoship-signals/anoship/signals/: __init__.py  channels.py  normalize.py  synthetic.py  window.py
configs/: high_impact.yaml  standard.yaml
docs/: ARCHITECTURE.md  CONTRIBUTING.md  EXPERIMENTS.md
examples/: end_to_end.py
scripts/: dev_install.sh
tests/: test_ahsc_clusterer.py  test_ahsc_enhancement.py  test_ahsc_microcluster.py  test_ahsc_projection.py  test_cli.py  test_detectors.py  test_habituation_ahsc.py  test_pipeline.py  test_policy.py  test_registry.py  test_scenarios.py  test_scoring.py
